--- a/bspwm/.config/picom/picom.conf
+++ b/bspwm/.config/picom/picom.conf
@@ -16,23 +16,23 @@ size-transition = true
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
 corner-radius = 0.0;
-#rounded-corners-exclude = [
+rounded-corners-exclude = [
   #"window_type = 'normal'",
- # "class_g = 'awesome'",
-  #"class_g = 'URxvt'",
-  #"class_g = 'XTerm'",
-  #"class_g = 'kitty'",
+  "class_g = 'awesome'",
+  "class_g = 'URxvt'",
+  "class_g = 'XTerm'",
+  "class_g = 'kitty'",
   #"class_g = 'Alacritty'",
-  #"class_g = 'Polybar'",
-  #"class_g = 'code-oss'",
+  "class_g = 'Polybar'",
+  "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
-  #"class_g = 'firefox'",
-  #"class_g = 'Thunderbird'"
-#];
-#round-borders = 1;
-#round-borders-exclude = [
+  "class_g = 'firefox'",
+  "class_g = 'Thunderbird'"
+];
+round-borders = 1;
+round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
-#];
+];
 
 #################################
 #             Shadows           #
@@ -48,14 +48,14 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 12;
+shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
- shadow-opacity = 0.75
+# shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -15;
+shadow-offset-x = -7;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
@@ -210,10 +210,10 @@ opacity-rule = [
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
   "100:class_g    = 'Alacritty'",
-  "80:class_g     = 'Polybar'",
+  #"80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
- # "70:class_g     = 'TelegramDesktop'",
+  "70:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'"
