--- a/bspwm/.config/nitrogen/nitrogen.cfg
+++ b/bspwm/.config/nitrogen/nitrogen.cfg
@@ -1,12 +1,12 @@
 [geometry]
-posx=5
-posy=25
-sizex=1356
-sizey=738
+posx=7
+posy=31
+sizex=1350
+sizey=728
 
 [nitrogen]
 view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/usr/share/backgrounds/archlinux;/home/mof/BackGrounds;
+dirs=/usr/share/backgrounds/archlinux;/home/mof/BackGrounds;/home/mof/Downloads;
