--- a/bspwm/.config/polybar/config
+++ b/bspwm/.config/polybar/config
@@ -39,13 +39,13 @@ font-7 = "Iosevka Nerd Font:pixelsize=10:antialias=true;3"
 font-8 = "Iosevka Nerd Font:style=Medium:size=22;5"
 font-9 = "Font Awesome 5 Free:pixelsize=9;2"
 font-10 = "Font Awesome 5 Free:pixelsize=9;2"
-font-11 = "Iosevka Nerd Font:pixelsize=10:antialias=true;3"
+font-11 = "Iosevka Nerd Font:pixelsize=11:antialias=true;3"
 font-12 = "Iosevka Nerd Font:pixelsize=12:antialias=true;3"
 
 ; Set modules list
 modules-center     = xwindow
 modules-right      = line-end networkspeedup updates-pacman-aurhelper filesystem memory cpu pavolume date logout
-modules-left = launcher bspwm browser thunar TelegramDesktop email galculator
+modules-left = launcher browser thunar TelegramDesktop email galculator bspwm
 
 cursor-click = pointer
 cursor-scroll = ns-resize
