--- a/bspwm/.config/polybar/config
+++ b/bspwm/.config/polybar/config
@@ -32,20 +32,21 @@ font-0 = "Inconsolata for Powerline:pixelsize=14:antialias=true;3"
 font-1 = "fixed:pixelsize=11;3:fontformat=truetype:antialias=true"
 font-2 = "unifont:fontformat=truetype:size=8:antialias=false;0"
 font-3 = "Weather Icons:size=12;1"
-font-4 = "Font Awesome 5 Free:pixelsize=9;2"
+font-4 = "Font Awesome 5 Free:pixelsize=8;2"
 font-5 = "Font Awesome 5 Free Solid:pixelsize=9;3"
 font-6 = "Font Awesome 5 Brands:pixelsize=15;2"
 font-7 = "Iosevka Nerd Font:pixelsize=10:antialias=true;3"
 font-8 = "Iosevka Nerd Font:style=Medium:size=22;5"
 font-9 = "Font Awesome 5 Free:pixelsize=9;2"
 font-10 = "Font Awesome 5 Free:pixelsize=9;2"
-font-11 = "Iosevka Nerd Font:pixelsize=11:antialias=true;3"
-font-12 = "Iosevka Nerd Font:pixelsize=12:antialias=true;3"
+font-11 = "Iosevka Nerd Font:pixelsize=10:antialias=true;3"
+font-12 = "Inconsolata for Powerline:pixelsize=12:antialias=true;3"
+font-13 = "Iosevka Nerd Font:pixelsize=12:antialias=true;3"
 
 ; Set modules list
 modules-center     = xwindow
-modules-right      = line-end networkspeedup updates-pacman-aurhelper filesystem memory cpu pavolume date logout
-modules-left = launcher browser thunar TelegramDesktop email galculator bspwm
+modules-right      = line-end networkspeedup filesystem memory cpu pavolume date logout
+modules-left = launcher bspwm browser thunar TelegramDesktop email galculator pacman-updates
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -56,6 +57,15 @@ tray-padding = 2
 ;=======================================
 ; Modules
 ;=======================================
+
+;;;;;;;;;;;;;
+;; Network ;;
+;;;;;;;;;;;;;
+[module/network]
+type = custom/text
+content = %{T8}%{T-}
+click-left = nm-connection-editor
+
 
 #rofi
 [module/logout]
@@ -122,7 +132,6 @@ label              = %{T8} %percentage%% %{T-}
 
 [module/memory]
 ; Powerline settings
-#inherit            = powerline-templates/right-to-left-item-with-separator
 background         = ${colors.yellow}
 separator          = ${colors.black}
 ; Other settings
@@ -153,7 +162,6 @@ separator          = ${colors.black}
 
 
 [module/networkspeedup]
-
 ; Other settings
 type              = internal/network
 interface         = eno1
@@ -164,6 +172,25 @@ label-connected = %{T8}%{F#3EC13F}%{F-}%downspeed:7% %{F#FE522C}%{F-}%upsp
 inherit            = powerline-templates/right-to-left-item-with-separator
 background         = ${colors.red}
 separator          = ${colors.black}
+
+
+[module/pacman-updates]
+; Powerline settings
+type = custom/script
+exec = yay -Pn
+interval = 1000
+label = %{T13}%output%%{T-}
+format-prefix = "  "
+format-prefix-foreground =#E4AD0D
+format-prefix-background = ${colors.black}
+
+
+[module/updates-pacman-aurhelper]
+type = custom/script
+exec = ~/.config/polybar/polybar-scripts/updates-pacman-aurhelper.sh
+interval = 1000
+format-prefix = 
+format-prefix-foreground = #ffb52a
 
 
 [module/browser]
@@ -211,10 +238,17 @@ click-left = galculator >/dev/null 2>&1 &
 [module/xwindow]
 ; Other settings
 type               = internal/xwindow
-label              = %{T10}%{F#8FBCBB}  %title:0:30:...%%{T-}%{F-}
+label              = %{T10}%{F#8FBCBB}%{T-} %{T13}%title:0:30:...%%{T-}%{F-}
 
+
+;;;;;;;;;;;;;;;;;;;;;;
+;; Bspwm Workspaces ;;
+;;;;;;;;;;;;;;;;;;;;;;
 [module/bspwm]
 type = internal/bspwm
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
 
 label-focused = %{T5}%name%%{T-}
 label-focused-background = ${colors.background-alt}
@@ -236,20 +270,62 @@ label-empty-padding = 1
 ;label-separator = 
 
 
-;label-mode-padding          = 0
-label-mode                  = "%{T2}%{B#802929 F#000000}  %index%  %{B#000000 F#802929}%{T-}"
-
-;label-focused-padding       = 0
-;label-focused               = "%{T2}%{B#88C0D0 F#3B4252}%{B#88C0D0 F#ffffff}  %name%  %{B#3B4252 F#88C0D0}%{T-}"
-
-;label-unfocused-padding     = ${self.label-focused-padding}
-;label-unfocused             = "%{T2}%{B#303030 F#000000}%{B#303030 F#999999}  %index%  %{B#000000 F#303030}%{T-}"
-
-;label-visible-padding       = ${self.label-focused-padding}
-;label-visible               = "%{T2}%{B#4f6a5a F#000000}%{B#4f6a5a F#FFFFFF}  %index%  %{B#000000 F#4f6a5a}%{T-}"
-
-;label-urgent-padding        = ${self.label-focused-padding}
-;label-urgent                = "%{T2}%{B#802929 F#000000}%{B#802929 F#ffffff}  %index%  %{B#000000 F#802929}%{T-}"
+;;;;;;;;;;;;;;;;;;;;;;
+;; Bspwm Workspaces ;;
+;;;;;;;;;;;;;;;;;;;;;;
+;[module/bspwm]
+;type = internal/bspwm
+;pin-workspaces = true
+;inline-mode = false
+;enable-click = true
+;enable-scroll = false
+;reverse-scroll = false
+;fuzzy-match = false
+; ws-icon-[0-9]+ = label;icon
+; Note that the label needs to correspond with the bspwm workspace name
+;ws-icon-0 = I;
+;ws-icon-1 = II;
+;ws-icon-2 = III;
+;ws-icon-3 = IV;
+;ws-icon-4 = V;
+;ws-icon-5 = VI;
+;ws-icon-6 = VII;
+;ws-icon-7 = VIII;
+;ws-icon-8 = IX;
+;ws-icon-9 = X;
+;ws-icon-default = ♟
+;format = <label-state> <label-mode>
+;label-monitor = %name%
+;label-mode-padding = 1
+;label-focused = %icon% %name%
+;label-focused-padding = 1
+;label-occupied = %icon% %name%
+;label-occupied-padding = 1
+;label-urgent = %icon% %name%
+;label-urgent-padding = 1
+;label-empty = %icon% %name%
+;label-empty-padding = 1
+;label-dimmed-foreground = ${colors.purple}
+;label-dimmed-underline = ${colors.purple}
+;label-dimmed-focused-background = ${colors.purple}
+;label-focused-foreground = ${colors.blue}
+;label-focused-underline = ${colors.blue}
+;label-occupied-underline = ${colors.purple}
+;label-urgent-foreground = ${colors.urgent}
+;label-urgent-underline = ${colors.urgent}
+; The following labels will be used to indicate the layout/mode
+; for the focused workspace. Requires <label-mode>
+;label-monocle = 
+;label-tiled = 
+;label-fullscreen = 
+;label-floating = 
+;label-pseudotiled = P
+;label-locked = 
+;label-sticky = 
+;label-private = 
+;label-sticky-foreground = ${colors.purple}
+;label-locked-foreground = ${colors.moderate}
+;label-private-foreground = ${colors.urgent}
 
 
 
