--- a/bspwm/.config/polybar/config
+++ b/bspwm/.config/polybar/config
@@ -58,6 +58,18 @@ tray-padding = 2
 ; Modules
 ;=======================================
 
+#
+#https://gitlab.com/dwt1/dotfiles/-/blob/master/.config/polybar/config
+#
+[module/arrow1]
+; grey to Blue
+type = custom/text
+content = "%{T2} %{T-}"
+content-font = 2
+content-foreground = ${colors.black}
+content-background = ${colors.red}
+
+
 ;;;;;;;;;;;;;
 ;; Network ;;
 ;;;;;;;;;;;;;
