--- a/bspwm/.config/polybar/powerline-for-polybar/samples/sample-colors.config
+++ b/bspwm/.config/polybar/powerline-for-polybar/samples/sample-colors.config
@@ -10,10 +10,13 @@
 
 
 [colors]
-red    = #242831
+#red    = #242831
+red    = #000000
 green  = #427241
 ;yellow = #88C0D0
-yellow = #75A4BF
-black  = #3B4252
+;yellow = #75A4BF
+yellow =#8FBCBB
+#black  = #3B4252
+black  = #2E3440
 white  = #aaaaaa
 gray   = #404040
