--- a/bspwm/.config/nitrogen/nitrogen.cfg
+++ b/bspwm/.config/nitrogen/nitrogen.cfg
@@ -1,12 +1,12 @@
 [geometry]
-posx=7
-posy=31
-sizex=1350
-sizey=728
+posx=328
+posy=114
+sizex=654
+sizey=600
 
 [nitrogen]
 view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/usr/share/backgrounds/archlinux;/home/mof/BackGrounds;/home/mof/Downloads;
+dirs=/usr/share/backgrounds/archlinux;/home/mof/Downloads;/home/mof/BackGrounds;
