--- a/dwm/.config/Notepadqq/Notepadqq.ini
+++ b/dwm/.config/Notepadqq/Notepadqq.ini
@@ -3,7 +3,7 @@ AutosaveInterval=15
 CheckVersionAtStartup=true
 CollectStatistics=true
 ExitOnLastTabClose=false
-LastSelectedDir=/home/mof/.config/fish
+LastSelectedDir=/home/mof
 LastStatisticTransmissionTime=1614160681
 Localization=en
 NotepadqqVersion=1.4.8
