--- a/dwm/.config/Notepadqq/Notepadqq.ini
+++ b/dwm/.config/Notepadqq/Notepadqq.ini
@@ -3,11 +3,11 @@ AutosaveInterval=15
 CheckVersionAtStartup=true
 CollectStatistics=true
 ExitOnLastTabClose=false
-LastSelectedDir=/home/mof/.dotfiles/dwm/suckless/dwm-6.2
+LastSelectedDir=/home/mof/.config/vifm/scripts
 LastStatisticTransmissionTime=1614160681
 Localization=en
 NotepadqqVersion=1.4.8
-RecentDocuments=@Variant(\0\0\0\x11\0\0\0<file:///home/mof/.dotfiles/dwm/suckless/dwm-6.2/config.def.h), @Variant(\0\0\0\x11\0\0\0@file:///home/mof/.config/nvim/plugged/gruvbox/colors/gruvbox.vim), @Variant(\0\0\0\x11\0\0\0&file:///home/mof/.config/nvim/init.vim), @Variant(\0\0\0\x11\0\0\0:file:///home/mof/.config/fish/functions/fish_greeting.fish), @Variant(\0\0\0\x11\0\0\0)file:///home/mof/.config/fish/config.fish), @Variant(\0\0\0\x11\0\0\0\x17\x66ile:///home/mof/.vimrc), @Variant(\0\0\0\x11\0\0\0\x1c\x66ile:///home/mof/.Xresources), @Variant(\0\0\0\x11\0\0\0\x33\x66ile:///run/media/mof/01D70A71FD5ECE30/config.def.h), @Variant(\0\0\0\x11\0\0\0\x37\x66ile:///run/media/mof/01D70A71FD5ECE30/fish/config.fish), @Variant(\0\0\0\x11\0\0\0/file:///run/media/mof/01D70A71FD5ECE30/.xinitrc)
+RecentDocuments=@Variant(\0\0\0\x11\0\0\0-file:///home/mof/.config/vifm/scripts/vifmimg), @Variant(\0\0\0\x11\0\0\0-file:///home/mof/.config/vifm/scripts/vifmrun), @Variant(\0\0\0\x11\0\0\0\x19\x66ile:///home/mof/.profile), @Variant(\0\0\0\x11\0\0\0<file:///home/mof/.dotfiles/dwm/suckless/dwm-6.2/config.def.h), @Variant(\0\0\0\x11\0\0\0@file:///home/mof/.config/nvim/plugged/gruvbox/colors/gruvbox.vim), @Variant(\0\0\0\x11\0\0\0&file:///home/mof/.config/nvim/init.vim), @Variant(\0\0\0\x11\0\0\0:file:///home/mof/.config/fish/functions/fish_greeting.fish), @Variant(\0\0\0\x11\0\0\0)file:///home/mof/.config/fish/config.fish), @Variant(\0\0\0\x11\0\0\0\x17\x66ile:///home/mof/.vimrc), @Variant(\0\0\0\x11\0\0\0\x1c\x66ile:///home/mof/.Xresources)
 RememberTabsOnExit=true
 ShowAllSymbols=false
 SmartIndentation=true
